# cmake_cpp_library_template

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: config.cmake.in
examples/: CMakeLists.txt  example.cpp
src/: library.cpp
tests/: CMakeLists.txt  library_test.cpp
